force-app/main/default/objects/Monthly_Data_Request__c/Monthly_Data_Request__c.object-meta.xml
<CustomObject>
    <description>Monthly data information we get per each &quot;Source&quot;. The data Method can be &quot;DAU&quot;/&quot;MAU&quot;/&quot;S2S&quot; and more. 
We get the data on a monthly bases from BI.</description>
    <label>Monthly Data Request</label>
    <nameField>
        <label>Monthly Data Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Data Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>