force-app/main/default/objects/Monthly_Data_Request__c/fields/AVG_Data_Date__c.field-meta.xml
<CustomField>
    <fullName>AVG_Data_Date__c</fullName>
    <description>BI needs a Date field to use for the query to which MDR to pull. So they can populate the &quot;AVG Data Units&quot; number field. Since the &quot;Created Date&quot; cannot be modified, and there will be cases where we need data fixes, we created this help date field.</description>
    <label>AVG Data Date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>