force-app/main/default/objects/Monthly_Data_Request__c/fields/AVG_Data_Units__c.field-meta.xml
<CustomField>
    <fullName>AVG_Data_Units__c</fullName>
    <description>The Average Daily Active Users of the Request. Populated from BI Dev API</description>
    <inlineHelpText>Calculated from BI according to the &quot;Country/Tier&quot; and Source.</inlineHelpText>
    <label>AVG Data Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>