force-app/main/default/objects/Monthly_Data_Request__c/fields/Contract_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Contract_Payment_Method__c</fullName>
    <formula>TEXT(Rate__r.Source__r.Contract__r.Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Payment Method</label>
    <type>Text</type>
</CustomField>