force-app/main/default/objects/Monthly_Data_Request__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country that the DAU is pulled from. Used for BI to detect the Request.</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>