force-app/main/default/objects/Monthly_Data_Request__c/fields/Country_Tier__c.field-meta.xml
<CustomField>
    <fullName>Country_Tier__c</fullName>
    <description>Represents the Value of the &quot;Country/Tier&quot; field on the related &quot;Rate&quot;.</description>
    <label>Country/Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Tier_for_Data_Partners</valueSetName>
    </valueSet>
</CustomField>