force-app/main/default/objects/Monthly_Data_Request__c/fields/Country_Tier_OLD__c.field-meta.xml
<CustomField>
    <fullName>Country_Tier_OLD__c</fullName>
    <label>Country/Tier OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>ROW</fullName>
            </value>
            <value>
                <fullName>Tier 1 - Diigo</fullName>
            </value>
            <value>
                <fullName>Russie - Frigate</fullName>
            </value>
            <value>
                <fullName>Tier 1 - US - Feature Point</fullName>
            </value>
            <value>
                <fullName>Tier1 - Feature Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>