force-app/main/default/objects/Monthly_Data_Request__c/fields/Data_Rate__c.field-meta.xml
<CustomField>
    <fullName>Data_Rate__c</fullName>
    <description>The rate we pay the partner for each DAU.</description>
    <label>Data Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>