force-app/main/default/objects/Monthly_Data_Request__c/fields/Monthly_Source_Request__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Source_Request__c</fullName>
    <description>All the Monthly Data Request should roll up to the relevant Monthly Source Data</description>
    <label>Monthly Source Request</label>
    <referenceTo>Monthly_Source_Request__c</referenceTo>
    <relationshipLabel>Monthly Data Requests</relationshipLabel>
    <relationshipName>Monthly_Data_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>