force-app/main/default/objects/Monthly_Data_Request__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Monthly Data Requests</relationshipLabel>
    <relationshipName>Monthly_Data_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>