force-app/main/default/objects/Monthly_Data_Request__c/fields/Request_Payment__c.field-meta.xml
<CustomField>
    <fullName>Request_Payment__c</fullName>
    <description>The AVG.DAU*Rate</description>
    <label>Request Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>