force-app/main/default/objects/Monthly_Data_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Key number for BI to detect each Data Request</description>
    <label>Request Type</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>