force-app/main/default/objects/Monthly_Data_Request__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Source of the Data Method. MIS-1690</description>
    <label>Source</label>
    <referenceTo>Source__c</referenceTo>
    <relationshipLabel>Monthly Data Requests</relationshipLabel>
    <relationshipName>Monthly_Data_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>