force-app/main/default/objects/Monthly_Data_Request__c/listViews/Calculated_MDR.listView-meta.xml
<ListView>
    <fullName>Calculated_MDR</fullName>
    <columns>NAME</columns>
    <columns>AVG_Data_Date__c</columns>
    <columns>AVG_Data_Units__c</columns>
    <columns>Data_Rate__c</columns>
    <columns>Status__c</columns>
    <columns>Monthly_Source_Request__c</columns>
    <columns>Rate__c</columns>
    <columns>Source__c</columns>
    <columns>Source_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Calculated</value>
    </filters>
    <label>Calculated MDR</label>
</ListView>