force-app/main/default/objects/Monthly_Data_Request__c/listViews/Open_MDR_pending_calculation.listView-meta.xml
<ListView>
    <fullName>Open_MDR_pending_calculation</fullName>
    <columns>Source__c</columns>
    <columns>NAME</columns>
    <columns>AVG_Data_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Country_Tier__c</columns>
    <columns>AVG_Data_Units__c</columns>
    <columns>Data_Rate__c</columns>
    <columns>Monthly_Source_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Calculated</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Monthly Data Requests - Last Month</label>
</ListView>